# Evo

./: .gitignore  meson.build
cpu/: Makefile
cpu/include/: const_rng.hpp
cpu/src/: main.cpp
vk/: Cargo.toml  Settings.toml  manual.md
vk/shaders/: FieldUpdate.glsl  PreRun.glsl  ShuffleHerbivore.glsl  ShufflePredator.glsl  SimulateHerbivore.glsl  SimulatePredator.glsl  dataset.glslh  simulate.glsl
vk/shaders/Compute/: FieldUpdate.glsl  SimulatePredator.glsl  UpdatePlane.glsl
vk/shaders/Compute/Herbivore/: PreRun.glsl  Simulate.glsl
vk/shaders/Compute/Predator/: PreRun.glsl  Simulate.glsl
vk/shaders/Definitions/: Dataset.glslh  ImageLock.glslh  Matrix.glslh  RenderParams.glslh  SimulationParams.glslh
vk/shaders/DrawHerbivore/: frag.glsl  vert.glsl
vk/shaders/DrawPredator/: frag.glsl  vert.glsl
vk/shaders/Graphics/HerbivoreGeometryPass/: frag.glsl  vert.glsl
vk/shaders/Graphics/LightingPass/: frag.glsl  vert.glsl
vk/shaders/Graphics/PredatorGeometryPass/: frag.glsl  vert.glsl
vk/src/: carriage.rs  dataset.rs  display.rs  evolve.rs  flipbook.rs  instance.rs  main.rs  settings.rs  state.rs
vk/src/evolve/: cpu.rs  mod.rs  wgpu.rs
vk/src/models/: basic.rs  mod.rs
vk/src/shaders/: compute.rs  graphics.rs  mod.rs
vulkan/: Makefile  def.h  fail.c  fail.h  main.c  meson.build  vk.c  vk.h  win.h
vulkan/inc/: def.h  fail.h  instance.hh
vulkan/shaders/: common.glsl  cross.glsl  evolve.glsl  genes.glsl  mutate.glsl
vulkan/src/: fail.c  instance.cc  main.cc
vulkan/tools/: assets
vulkan/win/: xlib.c
