[package]
name = "vk"
version = "0.1.0"
authors = [
    "Matheus Branco Borella <dark.ryu.550@gmail.com>",
    "Natan Bernardi Cerdeira <natanbc@gmail.com>"
]
edition = "2018"

[dependencies]
serde      = "1.0"
toml       = "0.5"
wgpu       = "0.6"
futures    = "0.3"
winit      = "0.24"
log        = "0.4"
env_logger = "0.8"